--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux": "^8.0.5",
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
+    "redux-saga": "^1.2.2",
     "styled-components": "^5.3.8",
     "styled-normalize": "^8.0.7",
     "web-vitals": "^2.1.4"
